--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,13 @@ body {
 }
 }
 
+
+.main-inner {
+     max-width: 890px;
+
+}
+
+
 img {
     width: 100%;
 }
@@ -46,7 +53,6 @@ img {
 .contents {
     display: flex;
     justify-content: space-between;
-    //justify-content: flex-end;
     margin: 40px auto;//◉
 }
 
@@ -148,6 +154,7 @@ img {
 }
 
 .side {
+    border-radius: 10px;
     width: 210px;
     height: 700px;
     background: #fff;
@@ -156,6 +163,7 @@ img {
        position: relative;
        //height: 100;
        img {
+           border-radius: 10px 10px 0 0;
            width: 100%;
        }
 
@@ -207,14 +215,17 @@ img {
 
 
 .main {
-    max-width: 890px;
+   width: 890px;
    &__Message {
+    border: 0.5px solid #333333;
+    border-radius: 10px;
        width: 100%;
        height: 300px;
        background: $powder;
    }
 
    &__Message-box {
+
     width: 600px;
     height: 100%;
     margin: 0 auto;
@@ -250,6 +261,27 @@ img {
         
     }
 
+    &__title-a {
+        font-size: 52px;
+        line-height: 1.25;
+        color: #d4bc0659;
+        width: 500px;
+        text-align: center;
+        top: -95px;
+        position: absolute;
+        font-family: 'Bruno Ace SC', cursive;
+        font-family: 'Great Vibes', cursive;
+        font-family: 'Italianno', cursive;
+        font-family: 'Josefin Sans', sans-serif;
+        font-family: 'Meddon', cursive;
+        font-family: 'Monsieur La Doulaise', cursive;
+        font-family: 'Sacramento', cursive;
+        font-family: 'Style Script', cursive;
+        
+        
+
+    }
+
     &__item {
         position: relative;
         width: 450px;
@@ -261,6 +293,8 @@ img {
             height: 450px;
             filter: opacity(95%);
         }
+
+
 
         &-title {
             font-size: 30px;
@@ -275,6 +309,8 @@ img {
     }
 
 
+
+    
 
 
     &__text {
@@ -293,13 +329,124 @@ img {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+//* {
+//    margin: 0;
+//    padding: 0;
+//    box-sizing: border-box;
+//  }
+//  
+//  ul,
+//  li {
+//    list-style: none;
+//  }
+//  
+//  body {
+//    background-color: #eeebdd;
+//    color: #1b1717;
+//    font-family: Avenir, 'Helvetica neue', Helvetica, sans-serif;
+//  }
+  
+  /* 共通 */
+  //.section {
+  //  width: 100%;
+  //  padding: 100px 0;
+  //}
+  //.container {
+  //  width: 80%;
+  //  max-width: 900px;
+  //  margin: 0 auto;
+  //}
+  //
+ //.heading {
+ //  font-size: 40px;
+ //  font-weight: 700;
+ //  letter-spacing: 0.05em;
+ //}
+  
+  /* タイトル */
+  //.title {
+  //  padding: 200px 0 20px;
+  //  font-size: 52px;
+  //  text-align: center;
+  //
+  //
+  //普通のセクション */
+  //normal-text {
+  // font-size: 20px;
+  // letter-spacing: 0.08em;
+  // margin-top: 60px;
+  //
+  //
+  //横スクロールセクション */
+  //de-scroll {
+  ///background-color: #1b1717;
+  //isplay: flex;
+  //ustify-content: center;
+  //lign-items: center;
+  //
+  //
+  //de-scroll-heading {
+  //olor: #eeebdd;
+  //
+  
+  .side-scroll-list-wrapper {
+    position: relative;
+    width: 100%;
+    width: 70%;
+    height: 700px;
+    margin-top: 100px;
+  }
+  
+  .side-scroll-list {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    display: flex;
+    gap: 0 60px;
+  }
+  
+  .side-scroll-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    //max-width: 890px;
+    height: 420px;
+    //background-color: #eeebdd;
+    //color: #1b1717;
+    //font-size: 32px;
+    //font-weight: 700;
+  }
+  
+  .side-scroll-item + .side-scroll-item {
+    margin-left: 60px;
+  }
+
+
+
+
+
+
+
+
+
 .gp {
 
     &__title {
         font-size: 30px;
         font-weight: bold;
         margin-left: 20px;
-        padding: 100px 0 40px 0;
+        padding: 100px 0 150px 0;
      }
 
     &__items {
@@ -393,11 +540,24 @@ img {
     margin-top: 100px;
 
     &__box {
+        border: 0.5px solid #333333;
+        border-radius: 10px;
+
+        position: relative;
         width: 100%;
-        background: $peach;
+        height: 100%;
+        background: url(../img/a\ bunch\ of\ purple\ flowers\ with\ yellow\ centers\ small\ JKoySyJDJn.jpeg)center center / cover;
+    }
+
+    &__filter {
+        border-radius: 10px;
+        background-color: #fedcd281;
+        //width: 100%;
+        //height: 100%;
     }
 
     &__title {
+       // z-index: 50;
         font-size: 30px;
         font-weight: bold;
         margin-left: 20px;
@@ -420,14 +580,12 @@ img {
          padding: 10px 0;
          font-size: 18px;
          font-weight: bold;
-         background: #f7ebe8;
 
      }
 
      &__text {
          padding: 10px 0;
          font-size: 16px;
-         background: #f7ebe8;
      }
 
      &__item {
@@ -436,6 +594,16 @@ img {
              padding-left: 20px;
          }
      }
+
+     &__border {
+     border: 0.5px solid #333333;
+     border-radius: 10px;
+     background: #fcf8f7a9;
+
+     //width: 100%;
+     //height: 100%;
+     }
+
 
      &__tel {
          padding-top: 25px;
@@ -488,7 +656,168 @@ img {
 
 
 .representative {
+    width: 100%;
+    height: 400px;
     &__container {
+        display: flex;
+    }
+
+    &__left {
+        width: 60%;
+    }
+
+    &__title {
+        font-size: 30px;
+        font-weight: bold;
+        margin-left: 20px;
+        padding: 100px 0 40px 0;
+    }
+
+    &__message {
+        width: 535px;
+        font-size: 20px;
+        padding: 15px 49px;
+    }
+
+    &__right {
+        width: 40%;
+        border: 0.5px solid #333333;
+        border-radius: 30px;
+
+        img {
+        border-radius: 30px;
+    
+        }
+    }
+}
+
+
+.access {
+
+    &__titlle {
+        font-size: 30px;
+        font-weight: bold;
+        margin-left: 20px;
+        padding: 100px 0 40px 0;
+    }
+
+    &__box {
+        display: flex;
         width: 100%;
     }
+
+    &__left {
+        width: 60%;
+
+    }
+
+    &__map {
+
+    }
+
+    &__right {
+        width: 40%;
+        padding-left: 20px;
+    }
+
+    &__address {
+        font-family: 'TsukuBRdGothic-Regular',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+        font-size: 20px;
+        font-weight: bold;
+        //margin: 0 auto;
+        //padding: 70px 20px;
+    }
+
+    &__number {
+        //font-weight: normal;
+        font-size: 17px;
+    }
+
+    &__guide {
+        font-family: 'TsukuBRdGothic-Regular',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+        font-size: 17px;
+    }
+
+    &__time {
+        display: flex;
+        margin-top: 15px;
+        font-family: 'TsukuBRdGothic-Regular',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+        font-size: 17px;
+    }
+}
+
+
+
+.inquiry {
+    
+    background: url(../img/00003471_500daf.jpg)center center / cover;
+    text-align: center;
+    margin-top: 100px;
+    font-family: 'TsukuBRdGothic-Regular',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+    width: 100%;
+    height: 300px;
+
+    &__filter {
+        background: rgba(244, 242, 243, 0.37);
+        padding-top: 30px;
+
+    }
+
+    &__title {
+        font-size: 40px;
+        font-weight: bold;
+    }
+
+    &__tel {
+
+        &-time {
+        font-size: 18px;
+        display: flex;
+        //justify-content: center;
+        }
+
+        &-number {
+            font-size: 40px;
+        }
+
+    }
+
+    &__icon {
+        margin-right: 15px;
+        font-size: 40px;
+        &-meil {
+            margin-right: 10px;
+        }
+    }
+
+    &__mail {
+        font-size: 25px;
+        width: 400px;
+        height: 80px;
+        background: $warm;
+        border-radius: 5px;
+        border: 1px solid #333333;
+        a {
+            color: #333333;
+            font-weight: bold;
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            padding: 15px 0;
+        }
+    }
+
+    &__box {
+        width: 785px;
+        margin: 25px auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+
+.box {
+    width: 100%;
+    height: 800px;
 }
