--- a/css/style.scss
+++ b/css/style.scss
@@ -14,10 +14,10 @@ $breakpoints: ( //キー　値
     }
 }
 
-$warm: #df744a;
+$warm: #df744ad2;
 $lemon: #dcb239;
 $peach: #fedcd2;
-$powder: #bfd8d2;
+$powder: #bfd8d256;
 
 body {
     font-size: 14px;
@@ -27,6 +27,7 @@ body {
     background: #EBEBEB;
     box-sizing: content-box;
     color: #333333;
+    background: url(../img/paint_00022.jpg)center center / cover;
 
 }
 
@@ -215,7 +216,7 @@ img {
 
 
 .main {
-   width: 890px;
+  // width: 890px;
    &__Message {
     border: 0.5px solid #333333;
     border-radius: 10px;
@@ -244,6 +245,44 @@ img {
        margin-top: 20px;
    }
 }
+
+
+
+.advantages {
+    margin-top: 100px;
+
+    &__container {
+        width: 100%;
+    }
+
+    &__title {
+        font-size: 30px;
+        font-weight: bold;
+        padding-top: 50px;
+    }
+
+    &__item {
+        margin-top: 40px;
+    }
+
+    &__item-title {
+        border: 1px solid #333333;
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        padding: 10px;
+
+    }
+
+    &__text {
+        font-size: 18px;
+        padding: 20px;
+
+    }
+
+}
+
+
 
 
 .duties {
@@ -547,7 +586,7 @@ img {
 
     &__filter {
         border-radius: 10px;
-        background-color: #fedcd281;
+        background-color: #fedcd257;
 
     }
 
@@ -734,6 +773,25 @@ img {
         font-family: 'TsukuBRdGothic-Regular',YuGothic,'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
         font-size: 17px;
     }
+
+    &__map-btn {
+        width: 200px;
+        height: 40px;
+        border-radius: 2px;
+        background: $lemon;
+        padding: 9px 0;
+        border: 0.5px solid #333333;
+        margin-top: 20px;
+        a {
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            font-weight: bold;
+            text-align: center;
+            color: #333333;
+        }
+    
+    }
 }
 
 
@@ -818,6 +876,7 @@ img {
 
 
 footer {
+    //padding-top: 20px;
     width: 100%;
     background: $powder;
     height: 100px;
@@ -826,7 +885,6 @@ footer {
 .footer {
 
     &__box {
-        margin-top: 50px;
         display: flex;
         align-items: center;
 
@@ -840,7 +898,7 @@ footer {
 
     &__nav {
         text-align: center;
-        margin: 0 auto;
+        margin: 20px auto 0;
         padding-right: 100px;
     }
 
@@ -848,7 +906,7 @@ footer {
         display: inline-block;
         display: flex;
         justify-content: space-between;
-        font-size: 20px;
+        font-size: 15px;
         width: 700px;
         //margin: 0 auto;
         //justify-content: center;
