--- a/css/style.scss
+++ b/css/style.scss
@@ -15,8 +15,8 @@ $breakpoints: ( //キー　値
 }
 
 $warm: #df744ad2;
-$lemon: #dcb239;
-$peach: #fedcd2;
+$lemon: #dcb339a1;
+$peach: #fedcd2ad;
 $powder: #bfd8d256;
 
 body {
@@ -54,7 +54,7 @@ img {
 .contents {
     display: flex;
     justify-content: space-between;
-    margin: 40px auto;//◉
+    margin: 100px auto;//◉
 }
 
 
@@ -259,6 +259,11 @@ img {
         font-size: 30px;
         font-weight: bold;
         padding-top: 50px;
+        //text-align: center;
+    }
+
+    &__items {
+        margin-top: 40px;
     }
 
     &__item {
@@ -277,7 +282,6 @@ img {
     &__text {
         font-size: 18px;
         padding: 20px;
-
     }
 
 }
@@ -682,6 +686,93 @@ img {
     font-size: 14px;
     margin: 20px 0 5px 0;
 }
+
+
+
+
+.question {
+   &__title {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 150px 0 80px 0;
+    width: 100%;
+   } 
+
+   &__box {
+       width: 100%;
+       display: flex;
+       flex-wrap: wrap;
+       margin: 0 auto;
+
+   }
+
+   &__item {
+    width: calc( 100% / 3 );
+    padding-top: ( 100% / 3 );
+    position: relative;
+    //border: 0.5px solid #090909;
+
+   }
+
+   &__lemon {
+    background: $lemon;
+    }    
+    &__powder {
+    background: $powder;
+    }
+    &__peach {
+    background: $peach;
+    }
+    &__warm {
+    background: $warm;  
+    }
+
+
+   &__Q {
+       padding: 15px;
+       font-size: 27px;
+       font-weight: bold;
+       color: rgb(63, 62, 62);
+       //color: rgba(255, 255, 255, 0.911);
+       //text-shadow:1px 1px 0 #090909, -1px -1px 0 #090909,
+       //-1px 1px 0 #090909, 1px -1px 0 #090909,
+       //0px 1px 0 #090909,  0-1px 0 #090909,
+       //-1px 0 0 #090909, 1px 0 0 #090909;
+
+       text-shadow:1px 1px 0 #fff, -1px -1px 0 #fff,
+       -1px 1px 0 #fff, 1px -1px 0 #fff,
+       0px 1px 0 #fff,  0-1px 0 #fff,
+       -1px 0 0 #fff, 1px 0 0 #fff;
+   }
+
+   &__text {
+       margin-top: 10px;
+       border: 0.5px solid #090909;
+       padding: 15px;
+       background: rgba(255, 255, 255, 0.747);
+       border-radius: 5px;
+   }
+
+
+   &__contents {
+       width: 350px;
+       height: auto;
+       position: absolute;
+       top: 20%;
+       left: 50%;
+       transform: translateX(-50%);
+
+       &-long {
+        top: 12%;
+    }
+   }
+
+}
+
+
+
+
+
 
 
 
